--- a/Source/manifest.json
+++ b/Source/manifest.json
@@ -1,11 +1,11 @@
 {
     "name": "__MSG_appName__",
     "description": "__MSG_appDesc__",
-    "version": "1.0.0",
+    "version": "1.1.0",
     "default_locale": "en",
     "minimum_chrome_version": "26",
     "manifest_version": 2,
-    "permissions": [ "http://*/*", "https://*/*" ],
+    "permissions": [ "http://*/*", "https://*/*", "contextMenus", "activeTab" ],
     "icons": {
         "16": "icon_16.png",
         "48": "icon_48.png",
