--- a/Source/manifest.json
+++ b/Source/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "__MSG_appName__",
     "description": "__MSG_appDesc__",
-    "version": "1.1.0",
+    "version": "1.2.0",
     "default_locale": "en",
     "minimum_chrome_version": "26",
     "manifest_version": 2,
@@ -23,5 +23,5 @@
       "run_at": "document_end"
     }
   ],
-  "web_accessible_resources": ["close.png"]
+  "web_accessible_resources": ["close.png" , "clear.png"]
 }
